--- a/Hooli/Hooli.Tests/Hooli.Tests.csproj
+++ b/Hooli/Hooli.Tests/Hooli.Tests.csproj
@@ -122,6 +122,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Hooli\Hooli.Web.csproj">
+      <Project>{DAA85ACE-F8B8-4070-8A81-161D717EA853}</Project>
+      <Name>Hooli.Web</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
