--- a/Hooli/Hooli/Web.config
+++ b/Hooli/Hooli/Web.config
@@ -7,6 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="WebConfigRoleProvider" type="WebConfigRoleProvider.Core.ConfigurationSection"/>
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Hooli-20141030194241;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Hooli-20141030194241.mdf" providerName="System.Data.SqlClient" />
@@ -24,6 +25,23 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
+    <roleManager defaultProvider="SqlProvider"
+    enabled="true"
+    cacheRolesInCookie="true"
+    cookieName=".ASPROLES"
+    cookieTimeout="30"
+    cookiePath="/"
+    cookieRequireSSL="false"
+    cookieSlidingExpiration="true"
+    cookieProtection="All" >
+      <providers>
+        <add
+          name="SqlProvider"
+          type="System.Web.Security.SqlRoleProvider"
+          connectionStringName="DefaultConnection"
+          applicationName="SampleApplication" />
+      </providers>
+    </roleManager>
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -36,6 +54,12 @@
       </namespaces>
     </pages>
   </system.web>
+  <WebConfigRoleProvider>
+    <roles>
+      <add name="User" />
+      <add name="Admin"  />
+    </roles>
+  </WebConfigRoleProvider>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
   <handlers>
