Added Reference to MySql.Web

--- a/Hooli/Hooli/Web.config
+++ b/Hooli/Hooli/Web.config
@@ -7,11 +7,11 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <section name="WebConfigRoleProvider" type="WebConfigRoleProvider.Core.ConfigurationSection"/>
+    <section name="WebConfigRoleProvider" type="WebConfigRoleProvider.Core.ConfigurationSection" />
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Hooli-20141030194241;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Hooli-20141030194241.mdf" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <remove name="LocalMySqlServer" /><add name="LocalMySqlServer" connectionString="" providerName="MySql.Data.MySqlClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -25,21 +25,9 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
-    <roleManager defaultProvider="SqlProvider"
-    enabled="true"
-    cacheRolesInCookie="true"
-    cookieName=".ASPROLES"
-    cookieTimeout="30"
-    cookiePath="/"
-    cookieRequireSSL="false"
-    cookieSlidingExpiration="true"
-    cookieProtection="All" >
+    <roleManager defaultProvider="SqlProvider" enabled="true" cacheRolesInCookie="true" cookieName=".ASPROLES" cookieTimeout="30" cookiePath="/" cookieRequireSSL="false" cookieSlidingExpiration="true" cookieProtection="All">
       <providers>
-        <add
-          name="SqlProvider"
-          type="System.Web.Security.SqlRoleProvider"
-          connectionStringName="DefaultConnection"
-          applicationName="SampleApplication" />
+        <add name="SqlProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="DefaultConnection" applicationName="SampleApplication" />
       </providers>
     </roleManager>
     <pages>
@@ -53,11 +41,38 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
-  </system.web>
+  <membership defaultProvider="MySQLMembershipProvider">
+      <providers>
+        <remove name="MySQLMembershipProvider" />
+        <add name="MySQLMembershipProvider" type="MySql.Web.Security.MySQLMembershipProvider, MySql.Web, Version=6.9.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" connectionStringName="LocalMySqlServer" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="true" applicationName="/" requiresUniqueEmail="false" passwordFormat="Clear" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="7" minRequiredNonalphanumericCharacters="1" passwordAttemptWindow="10" passwordStrengthRegularExpression="" />
+      </providers>
+    </membership><profile defaultProvider="MySQLProfileProvider">
+      <providers>
+        <remove name="MySQLProfileProvider" />
+        <add name="MySQLProfileProvider" type="MySql.Web.Profile.MySQLProfileProvider, MySql.Web, Version=6.9.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" connectionStringName="LocalMySqlServer" applicationName="/" />
+      </providers>
+    </profile><!--<roleManager defaultProvider="MySQLRoleProvider">
+      <providers>
+        <remove name="MySQLRoleProvider" />
+        <add name="MySQLRoleProvider" type="MySql.Web.Security.MySQLRoleProvider, MySql.Web, Version=6.9.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" connectionStringName="LocalMySqlServer" applicationName="/" />
+      </providers>
+    </roleManager>--><siteMap defaultProvider="MySqlSiteMapProvider">
+      <providers>
+        <remove name="MySqlSiteMapProvider" />
+        <add name="MySqlSiteMapProvider" type="MySql.Web.SiteMap.MySqlSiteMapProvider, MySql.Web, Version=6.9.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" connectionStringName="LocalMySqlServer" applicationName="/" />
+      </providers>
+    </siteMap><webParts>
+      <personalization defaultProvider="MySQLPersonalizationProvider">
+        <providers>
+          <remove name="MySQLPersonalizationProvider" />
+          <add name="MySQLPersonalizationProvider" type="MySql.Web.Personalization.MySqlPersonalizationProvider, MySql.Web, Version=6.9.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" connectionStringName="LocalMySqlServer" applicationName="/" />
+        </providers>
+      </personalization>
+    </webParts></system.web>
   <WebConfigRoleProvider>
     <roles>
       <add name="User" />
-      <add name="Admin"  />
+      <add name="Admin" />
     </roles>
   </WebConfigRoleProvider>
   <system.webServer>
