--- a/Hooli/Hooli/Hooli.Web.csproj
+++ b/Hooli/Hooli/Hooli.Web.csproj
@@ -304,6 +304,7 @@
     <Content Include="Views\AddNewSoftware\Index.cshtml" />
     <Content Include="Views\Profile\Index.cshtml" />
     <Content Include="Views\ActiveSoftware\Edit.cshtml" />
+    <Content Include="Views\AddNewSoftware\UnauthorizedAccess.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
