--- a/Hooli/Hooli/Hooli.Web.csproj
+++ b/Hooli/Hooli/Hooli.Web.csproj
@@ -317,6 +317,7 @@
     <Content Include="Views\AddNewSoftware\UnauthorizedAccess.cshtml" />
     <Content Include="Views\Comment\Index.cshtml" />
     <Content Include="Views\AddNewSoftware\Success.cshtml" />
+    <Content Include="Views\AddNewSoftware\UnsuccessfulUpload.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
